Fix location parts to align items center and Lifted the minimum width of the loc li to250px to make sure Container fits

--- a/css/cmps/locs.css
+++ b/css/cmps/locs.css
@@ -35,7 +35,7 @@
 
 .loc-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
     gap: 1em;
 
@@ -50,6 +50,7 @@
     width: 100%;
     height: auto;
 
+    justify-items: center;
     padding: .5em;
 
     text-align: center;
